* Reverse engineer the IArea system.

--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -292,6 +292,10 @@
     <ClInclude Include="$(MC_ROOT)\source\client\sound\SoundEngine.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\sound\SoundRepository.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\sound\SoundSystem.hpp" />
+    <ClInclude Include="..\..\..\..\source\client\player\input\IArea.hpp" />
+    <ClInclude Include="..\..\..\..\source\client\player\input\IncludeExcludeArea.hpp" />
+    <ClInclude Include="..\..\..\..\source\client\player\input\PolygonArea.hpp" />
+    <ClInclude Include="..\..\..\..\source\client\player\input\RectangleArea.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\source\client\app\App.cpp" />
@@ -372,6 +376,9 @@
     <ClCompile Include="$(MC_ROOT)\source\client\sound\SoundEngine.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\sound\SoundRepository.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\sound\SoundSystem.cpp" />
+    <ClCompile Include="..\..\..\..\source\client\player\input\IncludeExcludeArea.cpp" />
+    <ClCompile Include="..\..\..\..\source\client\player\input\PolygonArea.cpp" />
+    <ClCompile Include="..\..\..\..\source\client\player\input\RectangleArea.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.vcxproj">
