Clean Up CMake Build System

--- a/platforms/sdl/CMakeLists.txt
+++ b/platforms/sdl/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.16.0)
-project(reminecraftpe)
-
-set(CMAKE_BUILD_TYPE Debug)
+project(reminecraftpe-sdl)
 
 # SDL Build
 add_compile_definitions(USE_SDL USE_OPENAL HANDLE_CHARS_SEPARATELY)
@@ -29,31 +27,22 @@ else()
 endif()
 
 # Build
-if(EMSCRIPTEN)
 add_executable(reminecraftpe
     main.cpp
-	AppPlatform_sdlbase.cpp
-    AppPlatform_emscripten.cpp
-    ../openal/SoundSystemAL.cpp
 )
-else()
-add_executable(reminecraftpe
-    main.cpp
-	AppPlatform_sdlbase.cpp
-    AppPlatform_sdl.cpp
-    ../openal/SoundSystemAL.cpp
-)
-endif()
 
 # Core
 add_subdirectory(../../source source)
 target_link_libraries(reminecraftpe reminecraftpe-core)
 
-# LibPNG
-if(NOT EMSCRIPTEN)
-    find_package(PNG REQUIRED)
-    target_link_libraries(reminecraftpe PNG::PNG)
+# SDL Base And Platform
+add_subdirectory(base)
+if(EMSCRIPTEN)
+    add_subdirectory(emscripten)
+else()
+    add_subdirectory(desktop)
 endif()
+target_link_libraries(reminecraftpe reminecraftpe-sdl-platform)
 
 # SDL
 if(TARGET SDL2::SDL2main)
@@ -72,5 +61,5 @@ endif()
 if(EMSCRIPTEN)
     target_link_options(reminecraftpe PRIVATE --use-preload-plugins --preload-file "${CMAKE_CURRENT_SOURCE_DIR}/../../game/assets@/assets")
 elseif(NOT EXISTS "${CMAKE_CURRENT_BINARY_DIR}/assets")
-    file(CREATE_LINK "${CMAKE_CURRENT_SOURCE_DIR}/assets" "${CMAKE_CURRENT_BINARY_DIR}/assets" SYMBOLIC)
+    file(CREATE_LINK "${CMAKE_CURRENT_SOURCE_DIR}/../../game/assets" "${CMAKE_CURRENT_BINARY_DIR}/assets" SYMBOLIC)
 endif()
