--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -274,3 +274,11 @@ else()
     find_package(OpenGL REQUIRED)
     target_link_libraries(reminecraftpe-core PUBLIC OpenGL::OpenGL OpenGL::GLU)
 endif()
+
+# Sound Data
+if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/../sound_data/sounds.h")
+    if(NOT DEFINED ENV{CI})
+        message(WARNING "Missing sound data! Did you run tools/grabsounds.py?")
+    endif()
+    target_compile_definitions(reminecraftpe-core PRIVATE MISSING_SOUND_DATA)
+endif()
