--- a/platforms/windows/projects/minecraftcpp_vs2010.vcxproj.filters
+++ b/platforms/windows/projects/minecraftcpp_vs2010.vcxproj.filters
@@ -1170,6 +1170,12 @@
     <ClInclude Include="$(MC_ROOT)\compat\AKeyCodes.hpp">
       <Filter>thirdparty</Filter>
     </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\platforms\windows\LoggerWindows.hpp">
+      <Filter>source\platforms\windows</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\common\Logger.hpp">
+      <Filter>source\common</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\thirdparty\raknet\TwoWayAuthentication.cpp">
@@ -2197,6 +2203,12 @@
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\platforms\windows\SoundSystemWindows.cpp">
       <Filter>source\platforms\windows</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\platforms\windows\LoggerWindows.cpp">
+      <Filter>source\platforms\windows</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\common\Logger.cpp">
+      <Filter>source\common</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
