* Move AppPlatform_emscripten to the sdl directory
As pointed out by #82, the behavior before this commit is unintuitive.

--- a/platforms/sdl/CMakeLists.txt
+++ b/platforms/sdl/CMakeLists.txt
@@ -33,7 +33,7 @@ if(EMSCRIPTEN)
 add_executable(reminecraftpe
     main.cpp
 	AppPlatform_sdlbase.cpp
-    ../emscripten/AppPlatform_emscripten.cpp
+    AppPlatform_emscripten.cpp
     ../openal/SoundSystemAL.cpp
 )
 else()
