Reduce Number Of CMake Projects

--- a/platforms/sdl/CMakeLists.txt
+++ b/platforms/sdl/CMakeLists.txt
@@ -27,22 +27,30 @@ else()
 endif()
 
 # Build
-add_executable(reminecraftpe
+set(SOURCES
     main.cpp
+    base/AppPlatform_sdl_base.cpp
 )
+if(EMSCRIPTEN)
+    list(APPEND SOURCES emscripten/AppPlatform_sdl.cpp)
+else()
+    list(APPEND SOURCES desktop/AppPlatform_sdl.cpp)
+endif()
+add_executable(reminecraftpe ${SOURCES})
 
 # Core
 add_subdirectory(../../source source)
 target_link_libraries(reminecraftpe reminecraftpe-core)
 
-# SDL Base And Platform
-add_subdirectory(base)
-if(EMSCRIPTEN)
-    add_subdirectory(emscripten)
-else()
-    add_subdirectory(desktop)
+# OpenAL
+add_subdirectory(../openal openal)
+target_link_libraries(reminecraftpe reminecraftpe-openal)
+
+# LibPNG (If Needed)
+if(NOT EMSCRIPTEN)
+    find_package(PNG REQUIRED)
+    target_link_libraries(reminecraftpe PNG::PNG)
 endif()
-target_link_libraries(reminecraftpe reminecraftpe-sdl-platform)
 
 # SDL
 if(TARGET SDL2::SDL2main)
@@ -55,4 +63,11 @@ if(EMSCRIPTEN)
     target_link_options(reminecraftpe PRIVATE -sALLOW_MEMORY_GROWTH=1)
     # Export Resize Function
     target_link_options(reminecraftpe PRIVATE -sEXPORTED_FUNCTIONS=_main,_resize_from_js -sEXPORTED_RUNTIME_METHODS=ccall)
+endif()
+
+# Assets
+if(EMSCRIPTEN)
+    target_link_options(reminecraftpe PRIVATE --use-preload-plugins --preload-file "${CMAKE_CURRENT_SOURCE_DIR}/../../game/assets@/assets")
+else()
+    file(CREATE_LINK "${CMAKE_CURRENT_SOURCE_DIR}/../../game/assets" "${CMAKE_CURRENT_BINARY_DIR}/assets" SYMBOLIC)
 endif()
