* Reverse IBuildInput and MouseHandler * Replace the new relative paths in the client project with $(MC_ROOT) again

--- a/platforms/windows/projects/Client/Client.vcxproj.filters
+++ b/platforms/windows/projects/Client/Client.vcxproj.filters
@@ -317,17 +317,23 @@
     <ClInclude Include="$(MC_ROOT)\source\client\network\ClientSideNetworkHandler.hpp">
       <Filter>Header Files\Network</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\source\client\player\input\IArea.hpp">
-      <Filter>Source Files\Player\Input</Filter>
+    <ClInclude Include="$(MC_ROOT)\source\client\player\input\RectangleArea.hpp">
+      <Filter>Header Files\Player\Input</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\source\client\player\input\IncludeExcludeArea.hpp">
-      <Filter>Source Files\Player\Input</Filter>
+    <ClInclude Include="$(MC_ROOT)\source\client\player\input\PolygonArea.hpp">
+      <Filter>Header Files\Player\Input</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\source\client\player\input\PolygonArea.hpp">
-      <Filter>Source Files\Player\Input</Filter>
+    <ClInclude Include="$(MC_ROOT)\source\client\player\input\MouseHandler.hpp">
+      <Filter>Header Files\Player\Input</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\source\client\player\input\RectangleArea.hpp">
-      <Filter>Source Files\Player\Input</Filter>
+    <ClInclude Include="$(MC_ROOT)\source\client\player\input\IncludeExcludeArea.hpp">
+      <Filter>Header Files\Player\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\player\input\IArea.hpp">
+      <Filter>Header Files\Player\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\player\input\IBuildInput.hpp">
+      <Filter>Header Files\Player\Input</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -565,13 +571,19 @@
     <ClCompile Include="$(MC_ROOT)\source\client\network\ClientSideNetworkHandler.cpp">
       <Filter>Source Files\Network</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\source\client\player\input\IncludeExcludeArea.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\client\player\input\IncludeExcludeArea.cpp">
       <Filter>Source Files\Player\Input</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\source\client\player\input\PolygonArea.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\client\player\input\PolygonArea.cpp">
       <Filter>Source Files\Player\Input</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\source\client\player\input\RectangleArea.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\client\player\input\RectangleArea.cpp">
+      <Filter>Source Files\Player\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\player\input\MouseHandler.cpp">
+      <Filter>Source Files\Player\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\player\input\IBuildInput.cpp">
       <Filter>Source Files\Player\Input</Filter>
     </ClCompile>
   </ItemGroup>
