--- a/platforms/windows/projects/Common/Common.vcxproj
+++ b/platforms/windows/projects/Common/Common.vcxproj
@@ -247,6 +247,7 @@
     <ClCompile Include="$(MC_ROOT)\source\common\Timer.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\common\Util.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\common\Utils.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\common\SmoothFloat.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\common\CThread.hpp" />
@@ -258,6 +259,7 @@
     <ClInclude Include="$(MC_ROOT)\source\common\Timer.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\common\Util.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\common\Utils.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\common\SmoothFloat.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
