* Add feedback textures to the gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -439,3 +439,5 @@ Win32/
 # Ignore options.txt - where your configuration will be saved
 /game/options.txt
 /game/assetsO
+/game/assets/gui/feedback_fill.png
+/game/assets/gui/feedback_outer.png
